[gd_scene load_steps=16 format=3 uid="uid://bpypdlpe7tydd"]

[ext_resource type="Script" uid="uid://cgllhjc3q35a3" path="res://scripts/NeuralNetwork/nn_gui.gd" id="1_2egc2"]
[ext_resource type="PackedScene" uid="uid://mg1muypmihai" path="res://addons/utils/plotter/plotter.tscn" id="3_2ltmf"]
[ext_resource type="Theme" uid="uid://c412doxf410yo" path="res://NNGUI_theme.tres" id="5_hqujm"]
[ext_resource type="PackedScene" uid="uid://cluuflrbb3c0i" path="res://addons/utils/components/swiper/swiper.tscn" id="6_11bf3"]
[ext_resource type="Texture2D" uid="uid://dc1rad5lhju7o" path="res://icons/used/backward-fast.svg" id="7_11bf3"]
[ext_resource type="Script" uid="uid://q3ov1pgc20gp" path="res://scripts/NeuralNetwork/nn_gui_network.gd" id="7_k2m4n"]
[ext_resource type="Texture2D" uid="uid://bh7oxyanc4e77" path="res://icons/used/icon_chevron_right.tres" id="9_u8gyf"]
[ext_resource type="Texture2D" uid="uid://p48tsntca8hv" path="res://icons/used/icon_dice.tres" id="10_n60vm"]
[ext_resource type="Texture2D" uid="uid://ci5wrxl5ll2ca" path="res://icons/used/forward-step.svg" id="11_11bf3"]
[ext_resource type="Texture2D" uid="uid://dsqwddmq3auj7" path="res://icons/used/icon_reload.tres" id="11_s3iod"]
[ext_resource type="Script" uid="uid://baxxfxn6i5b7j" path="res://scripts/global_menu.gd" id="12_11bf3"]
[ext_resource type="Texture2D" uid="uid://dj0glxoaeyoyn" path="res://icons/used/play.svg" id="12_aak16"]

[sub_resource type="FoldableGroup" id="FoldableGroup_n0p7k"]
allow_folding_all = true

[sub_resource type="Theme" id="Theme_vefmb"]

[sub_resource type="SystemFont" id="SystemFont_d4bjk"]
font_names = PackedStringArray("Courier New")
font_weight = 450
subpixel_positioning = 0
keep_rounding_remainders = false

[node name="NNGUI" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_hqujm")
color = Color(0.08855983, 0.08855995, 0.0885599, 1)
script = ExtResource("1_2egc2")

[node name="VSplitContainer" type="VSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="NetworkContainer" type="MarginContainer" parent="VSplitContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 35
theme_override_constants/margin_top = 35
theme_override_constants/margin_right = 35
theme_override_constants/margin_bottom = 35

[node name="NetworkDisplay" type="Control" parent="VSplitContainer/NetworkContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 1
mouse_filter = 1
script = ExtResource("7_k2m4n")
min_alpha = 0.034
max_alpha = 1.0
line_width = 0.2
max_neuron_size = 19.260000000009313
weight_spacing = 0.41100000000000003
color_neg = Color(0.9730076, 0.5790525, 0.36817372, 1)
color_pos = Color(0, 0.53333336, 0.8627451, 1)
show_output_details = true
show_details = true

[node name="NeuronLabels" type="Control" parent="VSplitContainer/NetworkContainer/NetworkDisplay"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="HSplitContainer" type="HSplitContainer" parent="VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="IOPlotter" parent="VSplitContainer/HSplitContainer" instance=ExtResource("3_2ltmf")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
draw_mode = 1
dot_size = 0.1199999999953434
zoom_speed = 0.0
zoom_speed_threshold = 0.0
top_window_max = 0.0

[node name="LossPlotter" parent="VSplitContainer/HSplitContainer" instance=ExtResource("3_2ltmf")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
dot_size = 10.0
background_color = Color(0.069999985, 0.069999985, 0.069999985, 1)
zoom_speed = 0.113136165
zoom_speed_threshold = 0.07131552
top_window_min = 0.02999999999883584
bot_window_max = -2.0
bot_window_min = -2.039999999993597

[node name="ButtonContainer" type="MarginContainer" parent="."]
z_index = 2
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -373.0
offset_top = -284.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="BoxContainer" type="BoxContainer" parent="ButtonContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ButtonContainer/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8

[node name="SamplingFoldableContainer" type="FoldableContainer" parent="ButtonContainer/BoxContainer/VBoxContainer"]
layout_mode = 2
folded = true
title = "Sampling"
foldable_group = SubResource("FoldableGroup_n0p7k")

[node name="BoxContainer" type="BoxContainer" parent="ButtonContainer/BoxContainer/VBoxContainer/SamplingFoldableContainer"]
visible = false
layout_mode = 2
vertical = true

[node name="InputRandomSampling" type="CheckButton" parent="ButtonContainer/BoxContainer/VBoxContainer/SamplingFoldableContainer/BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Random interval"

[node name="SamplingResolutionContainer" type="MarginContainer" parent="ButtonContainer/BoxContainer/VBoxContainer/SamplingFoldableContainer/BoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ButtonContainer/BoxContainer/VBoxContainer/SamplingFoldableContainer/BoxContainer/SamplingResolutionContainer"]
layout_mode = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="ButtonContainer/BoxContainer/VBoxContainer/SamplingFoldableContainer/BoxContainer/SamplingResolutionContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ButtonContainer/BoxContainer/VBoxContainer/SamplingFoldableContainer/BoxContainer/SamplingResolutionContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
text = "Resolution"

[node name="ValueSamplingResolution" type="Label" parent="ButtonContainer/BoxContainer/VBoxContainer/SamplingFoldableContainer/BoxContainer/SamplingResolutionContainer/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "4"
horizontal_alignment = 2

[node name="InputSamplingResolution" type="HSlider" parent="ButtonContainer/BoxContainer/VBoxContainer/SamplingFoldableContainer/BoxContainer/SamplingResolutionContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 1.0
value = 100.0
rounded = true

[node name="NetworkFoldableContainer" type="FoldableContainer" parent="ButtonContainer/BoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
title = "Network"
foldable_group = SubResource("FoldableGroup_n0p7k")

[node name="VBoxContainer" type="VBoxContainer" parent="ButtonContainer/BoxContainer/VBoxContainer/NetworkFoldableContainer"]
layout_mode = 2

[node name="MenuProblems" type="MenuButton" parent="ButtonContainer/BoxContainer/VBoxContainer/NetworkFoldableContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Problems"
alignment = 0
icon_alignment = 2

[node name="InputShuffleTraining" type="CheckButton" parent="ButtonContainer/BoxContainer/VBoxContainer/NetworkFoldableContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Shuffle training"

[node name="InputSampleCount" parent="ButtonContainer/BoxContainer/VBoxContainer/NetworkFoldableContainer/VBoxContainer" instance=ExtResource("6_11bf3")]
unique_name_in_owner = true
layout_mode = 2
label_text = "Samples"
default_value = 8.0
range_max = 12.0
step = 1.0
rounded = true
val_exp_base = 2.0
ticks = 13

[node name="InputThreadCount" parent="ButtonContainer/BoxContainer/VBoxContainer/NetworkFoldableContainer/VBoxContainer" instance=ExtResource("6_11bf3")]
unique_name_in_owner = true
layout_mode = 2
label_text = "Threads"
default_value = 32.0
range_min = 1.0
range_max = 32.0
realign_steps = true
rounded = true
ticks = 10
max_text = "Yes"

[node name="InputBatchSize" parent="ButtonContainer/BoxContainer/VBoxContainer/NetworkFoldableContainer/VBoxContainer" instance=ExtResource("6_11bf3")]
unique_name_in_owner = true
layout_mode = 2
label_text = "Batch size"
range_max = 12.0
step = 1.0
rounded = true
val_exp_base = 2.0
ticks = 10

[node name="InputSamplesPerFrame" parent="ButtonContainer/BoxContainer/VBoxContainer/NetworkFoldableContainer/VBoxContainer" instance=ExtResource("6_11bf3")]
unique_name_in_owner = true
layout_mode = 2
label_text = "Samples per frame"
range_max = 12.0
step = 1.0
rounded = true
val_exp_base = 2.0
ticks = 10

[node name="InputBatchRatio" parent="ButtonContainer/BoxContainer/VBoxContainer/NetworkFoldableContainer/VBoxContainer" instance=ExtResource("6_11bf3")]
unique_name_in_owner = true
layout_mode = 2
label_text = "Batch Ratio"
range_max = 3.0
step = 1.0
rounded = true
val_exp_base = 2.0
ticks = 4

[node name="InputWeightsInit" parent="ButtonContainer/BoxContainer/VBoxContainer/NetworkFoldableContainer/VBoxContainer" instance=ExtResource("6_11bf3")]
unique_name_in_owner = true
layout_mode = 2
label_text = "Weights init"
range_max = 3.0
val_exp = 3.0
ticks = 10

[node name="InputLearnRate" parent="ButtonContainer/BoxContainer/VBoxContainer/NetworkFoldableContainer/VBoxContainer" instance=ExtResource("6_11bf3")]
unique_name_in_owner = true
layout_mode = 2
label_text = "Learn rate"
range_max = 2.0
val_exp = 3.0
ticks = 10

[node name="TrainingFoldableContainer" type="FoldableContainer" parent="ButtonContainer/BoxContainer/VBoxContainer"]
layout_mode = 2
title = "Training"

[node name="BoxContainer" type="BoxContainer" parent="ButtonContainer/BoxContainer/VBoxContainer/TrainingFoldableContainer"]
layout_mode = 2
vertical = true

[node name="ButtonsRow1" type="HBoxContainer" parent="ButtonContainer/BoxContainer/VBoxContainer/TrainingFoldableContainer/BoxContainer"]
custom_minimum_size = Vector2(0, 53)
layout_mode = 2
size_flags_horizontal = 3

[node name="ButtonRestart" type="Button" parent="ButtonContainer/BoxContainer/VBoxContainer/TrainingFoldableContainer/BoxContainer/ButtonsRow1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
icon = ExtResource("7_11bf3")
alignment = 0
icon_alignment = 1
expand_icon = true

[node name="ButtonFWD" type="Button" parent="ButtonContainer/BoxContainer/VBoxContainer/TrainingFoldableContainer/BoxContainer/ButtonsRow1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
mouse_default_cursor_shape = 2
icon = ExtResource("9_u8gyf")
icon_alignment = 1
expand_icon = true

[node name="ButtonNextSample" type="Button" parent="ButtonContainer/BoxContainer/VBoxContainer/TrainingFoldableContainer/BoxContainer/ButtonsRow1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 32
icon = ExtResource("10_n60vm")
icon_alignment = 1
expand_icon = true

[node name="ButtonsRow2" type="HBoxContainer" parent="ButtonContainer/BoxContainer/VBoxContainer/TrainingFoldableContainer/BoxContainer"]
custom_minimum_size = Vector2(0, 53)
layout_mode = 2
size_flags_horizontal = 3

[node name="ButtonReset" type="Button" parent="ButtonContainer/BoxContainer/VBoxContainer/TrainingFoldableContainer/BoxContainer/ButtonsRow2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
mouse_default_cursor_shape = 2
icon = ExtResource("11_s3iod")
icon_alignment = 1
expand_icon = true

[node name="ButtonStep" type="Button" parent="ButtonContainer/BoxContainer/VBoxContainer/TrainingFoldableContainer/BoxContainer/ButtonsRow2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
mouse_default_cursor_shape = 2
icon = ExtResource("11_11bf3")
icon_alignment = 1
expand_icon = true

[node name="ButtonRun" type="Button" parent="ButtonContainer/BoxContainer/VBoxContainer/TrainingFoldableContainer/BoxContainer/ButtonsRow2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
mouse_default_cursor_shape = 2
toggle_mode = true
button_pressed = true
icon = ExtResource("12_aak16")
icon_alignment = 1
expand_icon = true

[node name="TextContainer" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -495.0
offset_right = 1485.0
grow_vertical = 0
mouse_filter = 2
theme_override_constants/margin_bottom = 0

[node name="LeftTextLabel" type="Label" parent="TextContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme = SubResource("Theme_vefmb")
theme_override_fonts/font = SubResource("SystemFont_d4bjk")
theme_override_font_sizes/font_size = 26
text = "Output"
vertical_alignment = 2

[node name="MenuContainer" type="MarginContainer" parent="."]
visible = false
layout_mode = 0
offset_right = 16.0
offset_bottom = 16.0

[node name="MenuBar" type="MenuBar" parent="MenuContainer"]
layout_mode = 2
script = ExtResource("12_11bf3")

[node name="SettingsMenu" type="PopupMenu" parent="MenuContainer/MenuBar"]
oversampling_override = 1.0
title = "Settings"
size = Vector2i(159, 100)
